updated TOC and added correct IDs to grid page

--- a/grid.html
+++ b/grid.html
@@ -30,7 +30,9 @@
  but will for example not manage your infrastructure
  and might not suit your specific needs.
 
+<div id="purposes">
 <h2>Purposes and main functionality of a Selenium Grid</h2>
+</div>
 <dl>
     <dt>Central entry point for all tests</dt>
     <dt>Management and control of the nodes / environment where the browsers run on</dt>
@@ -40,7 +42,10 @@
     <dt>Load balancing</dt>
 </dl>
 
+
+<div id="components">
 <h2>Components of a Selenium Grid</h2>
+</div>
 
 <img src="images/grid.png">
 
@@ -79,8 +84,9 @@
 
 
 
-
+<div id="setup">
 <h2>Setting up your own Selenium Grid</h2>
+</div>
 
 <p>To use Selenium Grid,
  you need to maintain your own infrastructure for the nodes.
