--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@ end</code>
   </ul></li>
  <li><a href=grid.html#selenium_grid>Selenium Grid</a>
   <ul>
-   <li><a href=grid.html#pros_and_cons>Pros and cons</a>
-   <li><a href=grid.html#what_is_a_hub_and_node>What is a hub and node?</a>
-   <li><a href=grid.html#rolling_your_own_grid>Rolling your own grid</a>
+   <li><a href=grid.html#purposes>Purposes and main functionalitys</a>
+   <li><a href=grid.html#components>Components of a Selenium Grid</a>
+   <li><a href=grid.html#setup>Setting up your own Selenium Grid</a>
   </ul></li>
  <li><a href=drivers.html#driver_idiosyncrasies>Driver idiosyncrasies</a>
   <ul>
