Fixed typo in title closing tag

--- a/wd.html
+++ b/wd.html
@@ -511,7 +511,7 @@ driver.navigate.to 'https://seleniumhq.github.io/docs/'
 
 <pre><code class=html>&lt;!doctype html&gt;
 &lt;meta charset=utf-8&gt;
-&lt;title&gt;Race Condition Example&lt;title&gt;
+&lt;title&gt;Race Condition Example&lt;/title&gt;
 
 &lt;script&gt;
   var initialised = false;
