Fixed typo on title closing tag.

--- a/wd.html
+++ b/wd.html
@@ -1032,7 +1032,7 @@ driver.set_window_position(0, 0)</code>
 
 <pre><code class=html>&lt;!doctype html&gt;
 &lt;meta charset=utf-8&gt;
-&lt;title&gt;Race Condition Example&lt;title&gt;
+&lt;title&gt;Race Condition Example&lt;/title&gt;
 
 &lt;script&gt;
   var initialised = false;
