--- a/grid.html
+++ b/grid.html
@@ -224,7 +224,7 @@
       "platform": "WINDOWS",
       "maxInstances": 5,
       "firefox_binary": "",
-      "cleanSession": true 
+      "cleanSession": true
     },
     {
       "browserName": "chrome",
@@ -236,7 +236,7 @@
       "browserName": "internet explorer",
       "maxInstances": 1,
       "platform": "WINDOWS",
-      "webdriver.ie.driver": "C:/Program Files (x86)/Internet Explorer/iexplore.exe" 
+      "webdriver.ie.driver": "C:/Program Files (x86)/Internet Explorer/iexplore.exe"
     }
   ],
   "configuration": {
@@ -251,3 +251,15 @@
     "maxSessions": 5
   }
 }</code></pre>
+
+<h2>Docker Selenium</h2>
+<p><a href="https://www.docker.com/">Docker</a> provides a convenient way to
+  provision and scale Selenium Grid infrastructure in a unit known as a container.  Containers are standardised units of software that contain everything required
+  to run the desired application including all dependencies in a reliable and repeatable
+  way on different machines.
+
+  The Selenium project maintains a set of Docker images which you can download
+  and run to get a working grid up and running quickly.  Nodes are available for
+  both Firefox and Chrome.  Full details of how to provision a grid can be found
+  within the <a href="https://github.com/SeleniumHQ/docker-selenium">Docker Selenium</a>
+  repository.
