Added an introductory section on Docker Selenium.
I have added an introductory section about Selenium Docker.

I have signed the CLA.

Relates to issue #158

--- a/grid.html
+++ b/grid.html
@@ -263,3 +263,7 @@
   both Firefox and Chrome.  Full details of how to provision a grid can be found
   within the <a href="https://github.com/SeleniumHQ/docker-selenium">Docker Selenium</a>
   repository.
+
+  <h3>Prerequisits</h3>
+  <p>The only requirement to run a grid is to have Docker installed and working.
+  <a href="https://www.docker.com/products/docker-desktop">Install Docker</a>
