convert Java support to general support, add python and ruby

--- a/drivers.html
+++ b/drivers.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=grid.html title=Grid>
-<link rel=next href=java.html title="The Java Support Package">
+<link rel=next href=support.html title="The Java Support Package">
 <script src=docs.js></script>
 
 <h1>Driver idiosyncrasies</h1>
