--- a/attr.html
+++ b/attr.html
@@ -3,7 +3,7 @@
 <link rel=icon href=favicon.ico type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href=favicon.ico type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
-<link title="The Java Support Package" rel=prev href=java.html>
+<link title="The Java Support Package" rel=prev href=support.html>
 <link title="Typographical Conventions" rel=next href=typo.html>
 <script src=docs.js></script>
 
