--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@ end</code>
    <li><a href=drivers.html#shared_capabilities>Shared capabilities</a>
    <li><a href=drivers.html#driver_specific_capabilities>Driver specific capabilities</a>
   </ul></li>
- <li><a href=java.html#the_java_support_package>The Java support package</a>
+ <li><a href=support.html#the_java_support_package>The Java support package</a>
   <ul>
-   <li><a href=java.html#browser_navigation>Browser navigation</a>
-   <li><a href=java.html#working_with_colours>Working with colours</a>
-   <li><a href=java.html#working_with>Working with</a>
-   <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
-   <li><a href=java.html#working_with_web_elements>Working with web elements</a>
+   <li><a href=support.html#browser_navigation>Browser navigation</a>
+   <li><a href=support.html#working_with_colours>Working with colours</a>
+   <li><a href=support.html#working_with>Working with</a>
+   <li><a href=support.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
+   <li><a href=support.html#working_with_web_elements>Working with web elements</a>
   </ul></li>
 </ul>
 </div>
