Added imports to python example and using the more pythonic `driver.find_element_by_link_text()`

--- a/wd.html
+++ b/wd.html
@@ -489,26 +489,38 @@ for (String windowHandle : driver.getWindowHandles()) {
 
 //Wait for the new tab to finish loading content
 wait.until(titleIs("Selenium documentation"));</code>
- <code class=python>#Store the ID of the original window
-original_window = driver.current_window_handle
+ <code class=python>from selenium import webdriver
+from selenium.webdriver.support.ui import WebDriverWait
+from selenium.webdriver.support import expected_conditions as EC
 
-#Check we don't have other windows open already
-assert len(driver.window_handles) == 1
+# Start the driver
+with webdriver.Firefox() as driver:
+    # Open URL
+    driver.get("https://seleniumhq.github.io/docs/wd.html")
 
-#Click the link which opens in a new window
-driver.find_element(By.LINK_TEXT, "new window").click()
+    # Setup wait for later
+    wait = WebDriverWait(driver, 10)
 
-#Wait for the new window or tab
-wait.until(EC.number_of_windows_to_be(2))
+    # Store the ID of the original window
+    original_window = driver.current_window_handle
 
-#Loop through until we find a new window handle
-for window_handle in driver.window_handles:
-    if window_handle != original_window:
-        driver.switch_to.window(window_handle)
-        break
+    # Check we don't have other windows open already
+    assert len(driver.window_handles) == 1
 
-#Wait for the new tab to finish loading content
-wait.until(EC.title_is("Selenium documentation"))</code>
+    # Click the link which opens in a new window
+    driver.find_element_by_link_text("new window").click()
+
+    # Wait for the new window or tab
+    wait.until(EC.number_of_windows_to_be(2))
+
+    # Loop through until we find a new window handle
+    for window_handle in driver.window_handles:
+        if window_handle != original_window:
+            driver.switch_to.window(window_handle)
+            break
+
+    # Wait for the new tab to finish loading content
+    wait.until(EC.title_is("Selenium documentation"))</code>
  <code class=cs>//Store the ID of the original window
 String originalWindow = driver.CurrentWindowHandle;
 
