--- a/remote.html
+++ b/remote.html
@@ -124,7 +124,7 @@ public class AppServer {
 
 <pre><code class=ruby>require 'selenium-webdriver'
 
-driver = Selenium::WebDriver.for :remote, :url => "http://www.example.com", :desired_capabilities => :firefox
+driver = Selenium::WebDriver.for :remote, url: "http://www.example.com", desired_capabilities: :firefox
 driver.get "http://www.google.com"
 driver.close</code></pre>
 
