Added alternative Python install using setup.py

--- a/install.html
+++ b/install.html
@@ -56,7 +56,13 @@ The installation process for libraries depends on the language you choose to use
 Installation of Selenium libraries for Python can be done using pip:
 
 <pre><code class=shell>pip install selenium</code></pre>
-  
+
+Alternatively you can download the 
+<a href="https://pypi.org/project/selenium/#files">PyPI source archive</a> 
+(selenium-x.x.x.tar.gz) and install it using <i>setup.py</i>:
+
+<pre><code class=shell>python setup.py install</code></pre>
+
 <h3>C#</h3> 
 Installation of Selenium libraries for C# can be done using NuGet:
 
