--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ end</code>
   </ul></li>
  <li><a href=side.html#side>Selenium IDE</a>
   <ul>
-   <li><a href=side.html#side-intro>Introduction</a>
-   <li><a href=side.html#side-install>Installing the IDE</a>
+   <li><a href=side.html#introduction>Introduction</a>
+   <li><a href=side.html#installing_the_ide>Installing the IDE</a>
    </li></ul>
    <li><a href=install.html#selenium_installation>Selenium installation</a>
   <ul>
@@ -248,7 +248,7 @@ end</code>
   <ul>
    <li><a href=java.html#browser_navigation>Browser navigation</a>
    <li><a href=java.html#working_with_colours>Working with colours</a>
-   <li><a href=java.html#working_with>Working with</a>
+   <li><a href=java.html#working_with_select_elements>Working with select elements</a>
    <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
    <li><a href=java.html#working_with_web_elements>Working with web elements</a>
   </ul></li>
