--- a/grid.html
+++ b/grid.html
@@ -251,3 +251,19 @@
     "maxSession": 5
   }
 }</code></pre>
+
+<h2>Docker Selenium</h2>
+<p><a href="https://www.docker.com/">Docker</a> provides a convenient way to
+  provision and scale Selenium Grid infrastructure in a unit known as a container.  Containers are standardised units of software that contain everything required
+  to run the desired application including all dependencies in a reliable and repeatable
+  way on different machines.
+
+  The Selenium project maintains a set of Docker images which you can download
+  and run to get a working grid up and running quickly.  Nodes are available for
+  both Firefox and Chrome.  Full details of how to provision a grid can be found
+  within the <a href="https://github.com/SeleniumHQ/docker-selenium">Docker Selenium</a>
+  repository.
+
+  <h3>Prerequisits</h3>
+  <p>The only requirement to run a grid is to have Docker installed and working.
+  <a href="https://www.docker.com/products/docker-desktop">Install Docker</a>
