Add an example for JavaScript to Locating one element part

--- a/start.html
+++ b/start.html
@@ -101,6 +101,7 @@ types, amongst them finding an element by its ID attribute:
   <code class=python>driver.find_element_by_id("cheese")</code>
   <code class=cs>IWebElement element = driver.FindElement(By.Id("cheese"));</code>
   <code class=ruby>driver.find_element(id: "cheese")</code>
+  <code class=javascript>driver.findElement(By.id('cheese'))</code>
 </pre>
 
 <p>As seen in the example, locating elements in WebDriver is done on the
