--- a/quick.html
+++ b/quick.html
@@ -42,7 +42,7 @@ still using Selenium RC then you must
 
 <h2>Selenium IDE</h2>
 
-<p><em><a href=ide.html>Selenium IDE</a></em> is a
+<p><em><a href=https://www.seleniumhq.org/selenium-ide>Selenium IDE</a></em> is a
 Firefox plugin which can be used to record test steps in Firefox itself. 
 Selenium IDE can be used to generate <i>quick and dirty</i>
  test code in a variety of programming languages (i.e. C#,
