Changing wording for packages, typos, and less verbosity in example.

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ end</code>
    <li><a href=drivers.html#shared_capabilities>Shared capabilities</a>
    <li><a href=drivers.html#driver_specific_capabilities>Driver specific capabilities</a>
   </ul></li>
- <li><a href=support.html#the_java_support_package>The Java support package</a>
+ <li><a href=support.html#support_packages>Support Packages</a>
   <ul>
    <li><a href=support.html#browser_navigation>Browser navigation</a>
    <li><a href=support.html#working_with_colours>Working with colours</a>
