--- a/start.html
+++ b/start.html
@@ -99,7 +99,9 @@ types, amongst them finding an element by its ID attribute:
 <pre>
   <code class=java>WebElement cheese = driver.findElement(By.id("cheese"));</code>
   <code class=python>driver.find_element_by_id("cheese")</code>
+  <code class=cs>IWebElement element = driver.FindElement(By.Id("cheese"));</code>
   <code class=ruby>driver.find_element(id: "cheese")</code>
+  <code class=javascript>driver.findElement(By.id('cheese'))</code>
 </pre>
 
 <p>As seen in the example, locating elements in WebDriver is done on the
