Removing IDE page and redirecting only to new cool IDE docs

--- a/index.html
+++ b/index.html
@@ -173,18 +173,17 @@ end</code>
    <li><a href=intro.html#on_test_automation>On test automation</a>
    <li><a href=intro.html#types_of_testing>Types of testing</a>
    <li><a href=intro.html#about_this_documentation>About this documentation</a>
-  </ul></li>
- <li><a href=side.html#side>Selenium IDE</a>
-  <ul>
-   <li><a href=side.html#side-intro>Introduction</a>
-   <li><a href=side.html#side-install>Installing the IDE</a>
-   </li></ul>
-   <li><a href=install.html#selenium_installation>Selenium installation</a>
+  </ul>
+ </li>
+ <li><a href=https://www.seleniumhq.org/selenium-ide>Selenium IDE</a>  
+ </li>
+ <li><a href=install.html#selenium_installation>Selenium installation</a>
   <ul>
    <li><a href=install.html#using_browser_specific_jar>Using browser specific JAR</a>
    <li><a href=install.html#using_non_browser_specific_jar>Using non browser specific JAR</a>
    <li><a href=install.html#using_standalone_jar>Using standalone JAR</a>
-  </ul></li>
+  </ul>
+ </li>
  <li><a href=start.html#getting_started_with_webdriver>Getting started with WebDriver</a>
   <ul>
    <li><a href=start.html#consumer_browsers>Consumer browsers</a>
@@ -192,7 +191,8 @@ end</code>
    <li><a href=start.html#other_third_party_drivers_and_plugins>Other third party drivers and plugins</a>
    <li><a href=start.html#locating_elements>Locating elements</a>
    <li><a href=start.html#performing_actions_on_the_aut>Performing actions on the AUT</a>
-  </ul></li>
+  </ul>
+ </li>
  <li><a href=wd.html#webdriver>WebDriver</a>
   <ul>
    <li><a href=wd.html#driver_requirements>Driver requirements</a>
@@ -205,12 +205,14 @@ end</code>
    <li><a href=wd.html#web_elements>Web elements</a>
    <li><a href=wd.html#keyboard>Keyboard</a>
    <li><a href=wd.html#mouse>Mouse</a>
-  </ul></li>
+  </ul>
+ </li>
  <li><a href=remote.html#remote_webdriver>Remote WebDriver</a>
   <ul>
    <li><a href=remote.html#the_remote_webdriver_server>The Remote WebDriver server</a>
    <li><a href=remote.html#running_remote_webdriver_client>Running Remote WebDriver client</a>
-  </ul></li>
+  </ul>
+ </li>
  <li><a href=guidelines.html#guidelines_and_recommendations>Guidelines and Recommendations</a>
   <ul>
    <li><a href=guidelines.html#page_object_models>Page object models</a>
@@ -222,7 +224,8 @@ end</code>
    <li><a href=guidelines.html#test_independency>Test independency</a>
    <li><a href=guidelines.html#consider_using_a_fluent_api>Consider using a fluent API</a>
    <li><a href=guidelines.html#fresh_browser_per_test>Fresh browser per test</a>
-  </ul></li>
+  </ul>
+ </li>
  <li><a href=worst.html#worst_practices>Worst practices</a>
   <ul>
    <li><a href=worst.html#captchas>Captchas</a>
@@ -232,26 +235,30 @@ end</code>
    <li><a href=worst.html#test_dependency>Test dependency</a>
    <li><a href=worst.html#performance_testing>Performance testing</a>
    <li><a href=worst.html#link_spidering>Link spidering</a>
-  </ul></li>
+  </ul>
+ </li>
  <li><a href=grid.html#selenium_grid>Selenium Grid</a>
   <ul>
    <li><a href=grid.html#purposes>Purposes and main functionalitys</a>
    <li><a href=grid.html#components>Components of a Selenium Grid</a>
    <li><a href=grid.html#setup>Setting up your own Selenium Grid</a>
-  </ul></li>
+  </ul>
+ </li>
  <li><a href=drivers.html#driver_idiosyncrasies>Driver idiosyncrasies</a>
   <ul>
    <li><a href=drivers.html#shared_capabilities>Shared capabilities</a>
    <li><a href=drivers.html#driver_specific_capabilities>Driver specific capabilities</a>
-  </ul></li>
+  </ul>
+ </li>
  <li><a href=support.html#support_packages>Support Packages</a>
   <ul>
    <li><a href=support.html#browser_navigation>Browser navigation</a>
    <li><a href=support.html#working_with_colours>Working with colours</a>
-   <li><a href=support.html#working_with>Working with</a>
+   <li><a href=support.html#working_with_select_elements>Working with select elements</a>
    <li><a href=support.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
    <li><a href=support.html#working_with_web_elements>Working with web elements</a>
-  </ul></li>
+  </ul>
+ </li>
 </ul>
 </div>
 
