--- a/wd.html
+++ b/wd.html
@@ -605,7 +605,7 @@ driver.get 'https://www.seleniumhq.org'
 # Longer way
 driver.navigate.to 'https://seleniumhq.github.io/docs/'
  </code>
- <code class=cs>this.driver.Navigate().GoToUrl(@"http://google.com");</code>
+ <code class=cs>driver.Navigate().GoToUrl(@"http://google.com");</code>
  <code class=javascript>driver.get("https://seleniumhq.github.io/docs/");</code>
 </pre>
 
@@ -617,7 +617,7 @@ driver.navigate.to 'https://seleniumhq.github.io/docs/'
  <code class=java>driver.getCurrentUrl();</code>
  <code class=python>driver.current_url</code>
  <code class=ruby>driver.current_url</code>
- <code class=cs>this.driver.Url;</code>
+ <code class=cs>driver.Url;</code>
  <code class=javascript>await driver.getCurrentUrl();</code>
 </pre>
 
@@ -627,7 +627,7 @@ driver.navigate.to 'https://seleniumhq.github.io/docs/'
  <code class=java>driver.navigate().back();</code>
  <code class=python>driver.back()</code>
  <code class=ruby>driver.navigate.back</code>
- <code class=cs>this.driver.Navigate().Back();</code>
+ <code class=cs>driver.Navigate().Back();</code>
  <code class=javascript>driver.back();</code>
 </pre>
 
@@ -637,7 +637,7 @@ driver.navigate.to 'https://seleniumhq.github.io/docs/'
   <code class=java>driver.navigate().forward();</code>
   <code class=python>driver.forward()</code>
   <code class=ruby>driver.navigate.forward</code>
-  <code class=cs>this.driver.Navigate().Forward();</code>
+  <code class=cs>driver.Navigate().Forward();</code>
   <code class=javascript>driver.forward();</code>
  </pre>
 
@@ -647,7 +647,7 @@ driver.navigate.to 'https://seleniumhq.github.io/docs/'
   <code class=java>driver.navigate().refresh();</code>
   <code class=python>driver.refresh()</code>
   <code class=ruby>driver.navigate.refresh</code>
-  <code class=cs>this.driver.Navigate().Refresh();</code>
+  <code class=cs>driver.Navigate().Refresh();</code>
   <code class=javascript>driver.refresh();</code>
  </pre>
 
@@ -657,7 +657,7 @@ driver.navigate.to 'https://seleniumhq.github.io/docs/'
   <code class=java>driver.getTitle();</code>
   <code class=python>driver.title</code>
   <code class=ruby>driver.title</code>
-  <code class=cs>this.driver.Title;</code>
+  <code class=cs>driver.Title;</code>
   <code class=javascript>driver.getTitle();</code>
  </pre>
 
