Don't show language select for specific ruby examples (#215)

--- a/wd.html
+++ b/wd.html
@@ -562,7 +562,7 @@ simulating Chrome, Firefox or Internet Explorer depending on the configuration u
 
 Or, if you use <a href="https://bundler.io">Bundler</a>, add this line to your application's Gemfile:
 
-<pre><code class=ruby>gem "selenium-webdriver"</code></pre>
+<pre><code class=ruby always-show>gem "selenium-webdriver"</code></pre>
 
 And then execute the following command in prompt:
 
@@ -579,7 +579,7 @@ C:\Ruby200\bin;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem</code></p
 
 This should open a new Internet Explorer window:
 
-<pre><code class=ruby>require "selenium-webdriver"
+<pre><code class=ruby always-show>require "selenium-webdriver"
 driver = Selenium::WebDriver.for :internet_explorer</code></pre>
 
 <h2>Browser Navigation</h2>
