--- a/wd.html
+++ b/wd.html
@@ -392,7 +392,7 @@ driver = Selenium::WebDriver.for :edge</code>
 <p>If Edge driver is not present in your path, you can set the path using the following line:
 
 <pre>
-  <code class=java>System.setProperty("webdriver.edge.driver", "C:\path\to\MicrosoftWebDriver.exe");</code>
+  <code class=java>System.setProperty("webdriver.edge.driver", "C:/path/to/MicrosoftWebDriver.exe");</code>
   <code class=python>Edge(executable_path='/path/to/MicrosoftWebDriver.exe')</code>
   <code class=ruby>Selenium::WebDriver::Edge.driver_path = "C:\path\to\MicrosoftWebDriver.exe"</code>
 </pre>
@@ -436,7 +436,7 @@ driver = Selenium::WebDriver.for :internet_explorer</code>
 <p>If Internet Explorer driver is not present in your path, you can set the path using the following line:
 
 <pre>
-  <code class=java>System.setProperty("webdriver.ie.driver", "C:\path\to\IEDriver.exe");</code>
+  <code class=java>System.setProperty("webdriver.ie.driver", "C:/path/to/IEDriver.exe");</code>
   <code class=python>Ie(executable_path='/path/to/IEDriverServer.exe')</code>
   <code class=ruby>Selenium::WebDriver::IE.driver_path = "C:\path\to\IEDriver.exe"</code>
 </pre>
